<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr8.lab2apprun.MainActivity">



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtUserLogin"
        android:inputType="text"
        android:hint="@string/Usuario"
         />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPasswordLogin"
        android:layout_below="@+id/txtUserLogin"
        android:inputType="textPassword"
    android:hint="@string/Password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ingresar"
        android:id="@+id/btnLogin"
        android:layout_below="@+id/txtPasswordLogin"
        android:onClick="onClick"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registrarse"
        android:id="@+id/btnRegister"
        android:layout_alignTop="@+id/btnLogin"
        android:layout_toRightOf="@id/btnLogin"
        android:onClick="onClick" />
</RelativeLayout>
